<resources>
    <string name="app_name">UniTracker</string>
    <string name="term_list_button_text">Terms</string>
    <string name="course_list_button_text">Courses</string>
    <string name="assessment_list_button_text">Assessments</string>
    <string name="list_item_placeholder">Item not found!</string>
    <string name="title_label">Title:</string>
    <string name="type_label">Type:</string>
    <string name="date_label">Date:</string>
    <string name="course_label">Related Course ID:</string>
    <string name="title_hint">Title</string>
    <string name="type_hint">Type</string>
    <string name="date_hint">Date</string>
    <string name="course_hint">Course ID</string>
    <string name="save_button_text">Save</string>
    <string name="start_label_text">Start:</string>
    <string name="end_label_text">End:</string>
    <string name="term_start_hint">Start</string>
    <string name="term_end_hint">End</string>
    <string name="add_button_description">Add button</string>
    <string name="status_label_text">Status:</string>
    <string name="instructor_label_text">Instructor:</string>
    <string name="phone_label_text">Phone:</string>
    <string name="email_label_text">Email:</string>
    <string name="note_label_text">Note:</string>
    <string name="term_label_text">Related Term ID:</string>
    <string name="status_hint">Course Status</string>
    <string name="instructor_hint">Instructor</string>
    <string name="phone_hint">Phone</string>
    <string name="email_hint">Email</string>
    <string name="note_hint">Notes go here</string>
    <string name="save_button_description">save button</string>
    <string name="toggle_recycler_view_description">toggle assessment view</string>
    <string name="courses_label">Courses</string>
    <string name="assessments_label">Assessments</string>
    <string name="select_time">SELECT TIME</string>
    <string name="time_hint">Time</string>
    <string name="select_date">SELECT DATE</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date_button_text">Select Date</string>
    <string name="in_progress_radio">In Progress</string>
    <string name="planned_radio">Planned</string>
    <string name="dropped_radio">Dropped</string>
    <string name="completed_radio">Completed</string>
    <string name="performance_radio">Performance</string>
    <string name="objective_radio">Objective</string>
    <string name="title_string">Title</string>
    <string name="delete_assessment_description">Delete assessment</string>
    <string name="add_assessment_description">Add assessment</string>
    <string name="delete_course_description">Delete course</string>
    <string name="delete_term_description">Delete term</string>
    <string name="add_course_description">Add course</string>
    <string name="start_text">Start</string>
    <string name="instructor_contact_information">Instructor Contact Information</string>
    <string name="course_notes_hint">Course Notes</string>
    <string name="channel_name">scheduler</string>
    <string name="channel_description">Channel for UniTracker notifications.</string>
    <string name="send_note_description">Send note</string>
    <string name="menu_share_note">Share note</string>
    <string name="menu_set_reminder">Set reminder</string>
    <string name="logo_description">Calendar</string>
    <string name="modify_term_description">Modify term</string>
    <string name="modify_assessment_description">Modify assessment</string>
    <string name="modify_course_description">Modify course</string>
    <string name="start_hint">Start</string>
    <string name="end_text">End</string>
    <string name="set_alert_start_text">Set alert for start date</string>
    <string name="set_alert_end_text">Set alert for end date</string>
</resources>