<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/edit_padding"
    tools:context=".ui.CourseEdit">

    <TextView
        android:id="@+id/course_edit_title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:text="@string/title_label"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/course_edit_start_label"
        app:layout_constraintEnd_toStartOf="@+id/course_edit_title"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/course_edit_start_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:text="@string/start_label_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/course_edit_end_label"
        app:layout_constraintEnd_toStartOf="@+id/course_edit_start"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_edit_title_label" />

    <TextView
        android:id="@+id/course_edit_end_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:text="@string/end_label_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/course_edit_status_label"
        app:layout_constraintEnd_toStartOf="@+id/course_edit_end"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_edit_start_label" />

    <TextView
        android:id="@+id/course_edit_status_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:text="@string/status_label_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/course_edit_instructor_label"
        app:layout_constraintEnd_toStartOf="@+id/course_edit_status"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_edit_end_label" />

    <TextView
        android:id="@+id/course_edit_instructor_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:text="@string/instructor_label_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/course_edit_phone_label"
        app:layout_constraintEnd_toStartOf="@+id/course_edit_instructor"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_edit_status_label" />

    <TextView
        android:id="@+id/course_edit_phone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:text="@string/phone_label_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/course_edit_email_label"
        app:layout_constraintEnd_toStartOf="@+id/course_edit_phone"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_edit_instructor_label" />

    <TextView
        android:id="@+id/course_edit_email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:text="@string/email_label_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/course_edit_note_label"
        app:layout_constraintEnd_toStartOf="@+id/course_edit_email"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_edit_phone_label" />

    <TextView
        android:id="@+id/course_edit_note_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:text="@string/note_label_text"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/course_edit_note"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course_edit_email_label" />

    <EditText
        android:id="@+id/course_edit_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/note_hint"
        android:inputType="textMultiLine"
        android:maxHeight="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/course_edit_note_label"
        app:layout_constraintTop_toBottomOf="@+id/course_edit_email" />

    <EditText
        android:id="@+id/course_edit_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:ems="10"
        android:hint="@string/title_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/course_edit_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/course_edit_title_label"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/course_edit_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:ems="10"
        android:hint="@string/term_start_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/course_edit_end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/course_edit_start_label"
        app:layout_constraintTop_toBottomOf="@+id/course_edit_title" />

    <EditText
        android:id="@+id/course_edit_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:ems="10"
        android:hint="@string/term_end_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/course_edit_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/course_edit_end_label"
        app:layout_constraintTop_toBottomOf="@+id/course_edit_start" />

    <EditText
        android:id="@+id/course_edit_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:ems="10"
        android:hint="@string/status_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/course_edit_instructor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/course_edit_status_label"
        app:layout_constraintTop_toBottomOf="@+id/course_edit_end" />

    <EditText
        android:id="@+id/course_edit_instructor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:ems="10"
        android:hint="@string/instructor_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/course_edit_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/course_edit_instructor_label"
        app:layout_constraintTop_toBottomOf="@+id/course_edit_status" />

    <EditText
        android:id="@+id/course_edit_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:ems="10"
        android:hint="@string/phone_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/course_edit_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/course_edit_phone_label"
        app:layout_constraintTop_toBottomOf="@+id/course_edit_instructor" />

    <EditText
        android:id="@+id/course_edit_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/course_edit_note"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/course_edit_email_label"
        app:layout_constraintTop_toBottomOf="@+id/course_edit_phone" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/course_edit_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/save_button_description"
        android:onClick="onSaveCourse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/ic_menu_save" />
</androidx.constraintlayout.widget.ConstraintLayout>