<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/detail_view_padding"
    android:background="@color/background_color"
    tools:context=".ui.AssessmentDetail">


    <TextView
        android:id="@+id/assessment_detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:padding="@dimen/detail_view_padding"
        android:text="@string/title_hint"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/assessment_detail_type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/detail_view_padding"
        android:text="@string/type_label"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/delete_assessment"
        app:layout_constraintEnd_toStartOf="@+id/assessment_detail_type"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assessment_detail_start"
        app:layout_constraintVertical_bias="0.21" />

    <TextView
        android:id="@+id/assessment_detail_start_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="@dimen/detail_view_padding"
        android:text="@string/start_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assessment_detail_title" />

    <TextView
        android:id="@+id/assessment_detail_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/detail_view_padding"
        android:text="@string/start_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assessment_detail_start_label" />

    <TextView
        android:id="@+id/assessment_detail_end_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="@dimen/detail_view_padding"
        android:text="@string/end_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.956"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assessment_detail_title" />

    <TextView
        android:id="@+id/assessment_detail_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/detail_view_padding"
        android:text="@string/end_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.956"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assessment_detail_end_label" />

    <TextView
        android:id="@+id/assessment_detail_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/detail_view_padding"
        android:text="@string/type_hint"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/delete_assessment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/assessment_detail_type_label"
        app:layout_constraintTop_toBottomOf="@+id/assessment_detail_start"
        app:layout_constraintVertical_bias="0.21" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/modify_assessment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/modify_assessment_description"
        android:onClick="onModifyAssessment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/delete_assessment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/delete_assessment_description"
        android:onClick="onDeleteAssessment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/ic_menu_delete" />

</androidx.constraintlayout.widget.ConstraintLayout>